--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
-    id 'xyz.jpenilla.run-paper' version '2.0.1'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'xyz.jpenilla.run-paper' version '2.2.2'
 }
 
 group = 'org.infotoast'
-version = '4.1'
+version = '4.2'
 
 repositories {
     mavenCentral()
@@ -19,13 +19,13 @@ repositories {
     }
     maven {
         name = 'codemc-repo'
-        url = 'https://repo.codemc.org/repository/maven-public/'
+        url = uri('https://repo.codemc.org/repository/maven-public/')
     }
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
-    implementation 'de.tr7zw:item-nbt-api:2.11.2'
+    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
+    implementation 'de.tr7zw:item-nbt-api:2.12.2'
 }
 
 def targetJavaVersion = 17
@@ -55,15 +55,19 @@ processResources {
 
 tasks {
     runServer {
-        minecraftVersion("1.19.4")
+        minecraftVersion("1.20.4")
     }
 }
 
 shadowJar {
-    relocate 'de.tr7zw.changeme.nbtapi', 'de.tr7zw.lorax.nbtapi'
-    dependencies {
-        include(dependency('de.tr7zw:item-nbt-api:2.11.2'))
-    }
+    relocate('de.tr7zw.changeme.nbtapi', 'de.tr7zw.lorax.nbtapi')
+    /*dependencies {
+        include(dependency('de.tr7zw:item-nbt-api:2.12.2'))
+    }*/
     destinationDirectory.set(layout.buildDirectory.dir("distributions"))
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+build {
+    dependsOn(shadowJar)
 }
