--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 group = 'org.infotoast'
-version = '5.3'
+version = '6.0'
 
 repositories {
     mavenCentral()
     maven {
-        name = 'papermc-repo'
+        name = 'papermc'
         url = 'https://repo.papermc.io/repository/maven-public/'
     }
     maven {
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
+    compileOnly 'io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT'
     implementation 'de.tr7zw:item-nbt-api:2.15.0'
 }
 
@@ -69,7 +69,7 @@ processResources {
 
 tasks {
     runServer {
-        minecraftVersion("1.21.4")
+        minecraftVersion("1.21.5")
     }
 }
 
