--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,19 @@ repositories {
         name = 'codemc-repo'
         url = uri('https://repo.codemc.org/repository/maven-public/')
     }
+    maven {
+        name = 'enginehub'
+        url = 'https://maven.enginehub.org/repo/'
+    }
 }
 
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT'
+    compileOnly ("com.sk89q.worldedit:worldedit-core:7.3.13") {
+        exclude group: "org.yaml"
+    }
+    compileOnly "com.sk89q.worldedit:worldedit-bukkit:7.3.10"
+
     implementation 'de.tr7zw:item-nbt-api:2.15.0'
 }
 
